--- a/pages/cliente/mis_citas.html
+++ b/pages/cliente/mis_citas.html
@@ -112,9 +112,17 @@
             border-left-color: #f39c12;
         }
 
+        .appointment-card.En-Proceso {
+            border-left-color: #3498db;
+        }
+
         .appointment-card.Completado {
             border-left-color: #2ecc71;
-            opacity: 0.8;
+        }
+
+        .appointment-card.Cancelado {
+            border-left-color: #e74c3c;
+            opacity: 0.7;
         }
 
         .appointment-icon {
@@ -137,6 +145,42 @@
             margin: 0;
             color: #c0c0c0;
             font-size: 1em;
+            line-height: 1.5;
+        }
+
+        .status-badge {
+            display: inline-block;
+            padding: 4px 8px;
+            border-radius: 4px;
+            font-weight: bold;
+            font-size: 0.9em;
+            margin-left: 5px;
+        }
+
+        .status-badge.Pendiente {
+            color: #f39c12;
+            background: rgba(243, 156, 18, 0.1);
+        }
+
+        .status-badge.En-Proceso {
+            color: #3498db;
+            background: rgba(52, 152, 219, 0.1);
+        }
+
+        .status-badge.Completado {
+            color: #2ecc71;
+            background: rgba(46, 204, 113, 0.1);
+        }
+
+        .status-badge.Cancelado {
+            color: #e74c3c;
+            background: rgba(231, 76, 60, 0.1);
+        }
+
+        .status-message {
+            margin-top: 5px;
+            font-style: italic;
+            color: #fff;
         }
 
         .no-appointments {
@@ -188,6 +232,345 @@
             cursor: pointer;
         }
     </style>
+</head>
+
+<body>
+
+    <header class="dashboard-header">
+        <div class="header-left">
+            <a href="dashboard_cliente.html"><img src="../../imagenes/Logo_Autoguest.png" alt="Logo de AutoGuest"
+                    class="logo"></a>
+            <a href="dashboard_cliente.html" class="back-to-dashboard"><i class="fas fa-arrow-left"></i><span>Volver al
+                    Panel</span></a>
+        </div>
+        <div class="header-right">
+            <div class="user-greeting">¡Hola, ...!</div>
+            <a href="#" class="logout-btn">Cerrar Sesión</a>
+        </div>
+    </header>
+
+    <main class="page-container">
+        <div class="page-header">
+            <h1>Mis Citas</h1>
+            <button class="btn" id="addAppointmentBtn">Agendar Nueva Cita</button>
+        </div>
+        <div class="appointments-list" id="citasList"></div>
+    </main>
+
+    <div class="modal-overlay" id="addAppointmentModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Agendar una Nueva Cita</h2>
+                <button class="close-button" id="closeModalBtn">×</button>
+            </div>
+            <form id="addAppointmentForm">
+                <div class="form-group">
+                    <label for="modal-vehicle">Selecciona tu Vehículo</label>
+                    <select id="modal-vehicle" class="form-control" required></select>
+                </div>
+                <div class="form-group">
+                    <label for="modal-date">Fecha y Hora</label>
+                    <input type="datetime-local" id="modal-date" class="form-control" required>
+                </div>
+                <button type="submit" class="btn">Confirmar Cita</button>
+            </form>
+        </div>
+    </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', async () => {
+            // --- INICIO: Guardián de Autenticación y Personalización ---
+            if (sessionStorage.getItem('isLoggedIn') !== 'true') {
+                alert('Tu sesión ha expirado. Por favor, inicia sesión de nuevo.');
+                window.location.href = '../../login_cliente.html';
+                return;
+            }
+
+            const userName = sessionStorage.getItem('userName');
+            if (userName) {
+                document.querySelector('.header-right .user-greeting').textContent = `¡Hola, ${userName}!`;
+            }
+
+            const logoutBtn = document.querySelector('.logout-btn');
+            if (logoutBtn) {
+                logoutBtn.addEventListener('click', async (e) => {
+                    e.preventDefault();
+                    try {
+                        const response = await fetch('/api/registro/logout', { method: 'POST' });
+                        if (response.ok) {
+                            sessionStorage.clear();
+                            window.location.href = '../../index.html';
+                        } else {
+                            alert('Error al cerrar sesión.');
+                        }
+                    } catch (error) {
+                        alert('Error de red al cerrar sesión.');
+                    }
+                });
+            }
+            // --- FIN: Guardián de Autenticación ---
+
+            const citasList = document.getElementById('citasList');
+            const addAppointmentBtn = document.getElementById('addAppointmentBtn');
+
+            // Redirigir a buscar talleres para agendar
+            addAppointmentBtn.addEventListener('click', () => {
+                window.location.href = 'buscar_talleres.html';
+            });
+
+            const getStatusMessage = (estado) => {
+                switch (estado) {
+                    case 'Pendiente': return 'Solicitud enviada. Esperando taller.';
+                    case 'En Proceso': return 'Tu auto está siendo atendido.';
+                    case 'Completado': return '¡Listo! Contacta al taller para recoger tu vehículo.';
+                    case 'Cancelado': return 'Cita cancelada.';
+                    default: return estado;
+                }
+            };
+
+            const renderCita = (cita) => {
+                const card = document.createElement('div');
+                const estadoClass = cita.estado.replace(/\s+/g, '-');
+                card.className = `appointment-card ${estadoClass}`;
+                const fecha = new Date(cita.fechaHora).toLocaleString('es-ES', { day: '2-digit', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit' });
+
+                const mensajeEstado = getStatusMessage(cita.estado);
+
+                card.innerHTML = `
+    <i class="fas fa-wrench appointment-icon"></i>
+    <div class="appointment-details">
+        <h3>Cita para ${cita.vehiculoMarca} (${cita.vehiculoPlaca})</h3>
+        <p><strong>Taller:</strong> ${cita.tallerNombre}</p>
+        <p><strong>Fecha:</strong> ${fecha}</p>
+        <p>
+            <strong>Estado:</strong> 
+            <span class="status-badge ${estadoClass}">${cita.estado}</span>
+        </p>
+        <p class="status-message">${mensajeEstado}</p>
+    </div>
+    <a href="detalle_cita.html?id=${cita.idCita}" class="btn">Ver Detalles</a>
+`;
+                citasList.appendChild(card);
+            };
+
+            const loadCitas = async () => {
+                citasList.innerHTML = '<p style="color:white; text-align:center;">Cargando tus citas...</p>';
+
+                try {
+                    const res = await fetch('/api/citas');
+                    if (res.status === 401) {
+                        alert('Tu sesión ha expirado.');
+                        window.location.href = '../../login_cliente.html';
+                        return;
+                    }
+
+                    if (!res.ok) throw new Error('Error al cargar citas');
+
+                    const citas = await res.json();
+                    citasList.innerHTML = '';
+
+                    if (citas.length === 0) {
+                        citasList.innerHTML = '<p class="no-appointments">Aún no tienes citas agendadas.</p>';
+                    } else {
+                        citas.forEach(renderCita);
+                    }
+                } catch (error) {
+                    console.error(error);
+                    citasList.innerHTML = '<p class="no-appointments">Error al cargar tus citas.</p>';
+                }
+            };
+
+            // Cargar citas reales
+            loadCitas();
+        });
+    </script>
+</body>
+
+</html>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+<link rel="stylesheet" href="../../style.css">
+<style>
+    .dashboard-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 15px 40px;
+        background-color: #2c2c2c;
+        border-radius: 12px;
+        margin-bottom: 40px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    .header-left {
+        display: flex;
+        align-items: center;
+        gap: 25px;
+    }
+
+    .dashboard-header .logo {
+        width: 110px;
+        display: block;
+    }
+
+    .back-to-dashboard {
+        color: #c0c0c0;
+        text-decoration: none;
+        font-size: 15px;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        transition: color 0.3s ease;
+    }
+
+    .back-to-dashboard:hover {
+        color: #f39c12;
+    }
+
+    .header-right {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .header-right .user-greeting {
+        font-size: 1.1em;
+        color: #c0c0c0;
+    }
+
+    .header-right .logout-btn {
+        background-color: transparent;
+        color: #f39c12;
+        border: 1px solid #f39c12;
+        padding: 10px 20px;
+        font-size: 14px;
+        text-decoration: none;
+        border-radius: 8px;
+        transition: all 0.3s ease;
+    }
+
+    .header-right .logout-btn:hover {
+        background-color: #f39c12;
+        color: #1a1a1a;
+    }
+
+    .page-container {
+        max-width: 1200px;
+        margin: 40px auto;
+        padding: 0 20px;
+    }
+
+    .page-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 50px;
+    }
+
+    .page-header h1 {
+        font-size: 2.8em;
+        color: #ffffff;
+        margin: 0;
+    }
+
+    .appointments-list {
+        display: grid;
+        gap: 25px;
+    }
+
+    .appointment-card {
+        background-color: #2c2c2c;
+        border-radius: 12px;
+        padding: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 20px;
+        flex-wrap: wrap;
+        border-left: 5px solid #f39c12;
+    }
+
+    .appointment-card.Pendiente {
+        border-left-color: #f39c12;
+    }
+
+    .appointment-card.Completado {
+        border-left-color: #2ecc71;
+        opacity: 0.8;
+    }
+
+    .appointment-icon {
+        font-size: 2.5em;
+        color: #f39c12;
+        flex-shrink: 0;
+    }
+
+    .appointment-details {
+        flex-grow: 1;
+    }
+
+    .appointment-details h3 {
+        font-size: 1.5em;
+        margin: 0 0 8px 0;
+        color: #ffffff;
+    }
+
+    .appointment-details p {
+        margin: 0;
+        color: #c0c0c0;
+        font-size: 1em;
+    }
+
+    .no-appointments {
+        text-align: center;
+        color: #888;
+        padding: 40px;
+        background-color: #2c2c2c;
+        border-radius: 12px;
+    }
+
+    .modal-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        backdrop-filter: blur(5px);
+        display: none;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+    }
+
+    .modal-overlay.active {
+        display: flex;
+    }
+
+    .modal-content {
+        background-color: #2c2c2c;
+        padding: 40px;
+        border-radius: 12px;
+        width: 100%;
+        max-width: 500px;
+    }
+
+    .modal-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 30px;
+    }
+
+    .close-button {
+        background: none;
+        border: none;
+        color: #a0a0a0;
+        font-size: 28px;
+        cursor: pointer;
+    }
+</style>
 </head>
 
 <body>
@@ -554,6 +937,7 @@
                             loadCitas();
                         });
                     </script>
-                <script src="citas-fix.js"></script>`n</body>
+                    <script src="citas-fix.js"></script>`n
+                </body>
 
                 </html>
