--- a/pages/cliente/portal_cliente.html
+++ b/pages/cliente/portal_cliente.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +14,7 @@
         /* y los media queries */
     </style>
 </head>
+
 <body>
 
     <div class="form-page-wrapper">
@@ -32,13 +34,13 @@
             <div class="portal-selector-container">
                 <h1>¿Cómo quieres ingresar?</h1>
                 <p>Selecciona el portal que corresponde a tu tipo de cuenta.</p>
-                
+
                 <div class="portal-buttons">
-                    <a href="pages/cliente/dashboard_cliente.html" class="btn btn-portal-select">
+                    <a href="dashboard_cliente.html" class="btn btn-portal-select">
                         <i class="fa-solid fa-car"></i>
                         <span>Soy Cliente</span>
                     </a>
-                    
+
                     <a href="portal_taller.html" class="btn btn-portal-select">
                         <i class="fa-solid fa-wrench"></i>
                         <span>Soy un Taller</span>
@@ -53,4 +55,5 @@
     </div>
 
 </body>
+
 </html>
